@@ -258,6 +258,33 @@ afb_req_v4_parameters(
 	struct afb_data * const **params
 );
 
+/**
+ * Convert the parameter of the request of the given index
+ * to a given type and return it.
+ *
+ * The converted result is substituted to the previous parameter.
+ * There is no need to unreference the returned data as it becomes
+ * part of the request and will be released .
+ *
+ * Previous value of the parameter is automatically unreferenced.
+ * If you want keep it, you have to first reference it using afb_data_addref.
+ *
+ * @param reqv4 the request
+ * @param index index of the parameter to convert
+ * @param type  target type of the conversion
+ * @param result where to store the result (can be NULL)
+ *
+ * @return 0 in case of success, a negative code on error
+ */
+extern
+int
+afb_req_v4_param_convert(
+	struct afb_req_v4 *reqv4,
+	unsigned index,
+	struct afb_type *type,
+	struct afb_data **result
+);
+
 extern
 void
 afb_req_v4_reply_hookable(
